--- a/styles.css
+++ b/styles.css
@@ -38,10 +38,14 @@ body {
 
 .top-display {
 	opacity: 0.8;
+	height: 40%;
+	margin-bottom: 1px;
 }
 
 .bottom-display {
 	font-size: 1.3rem;
+	height: 60%;
+	margin-top: 1px;
 }
 
 .buttons {
@@ -77,7 +81,8 @@ body {
 	background: #4ca8ff;
 }
 
-.operator {
+.operator,
+.equals {
 	background: #007aff;
 }
 
