--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 /* Calculator body styles */
 .calculator-body {
 	padding: 5px;
-	width: 220px;
+	width: 300px;
 	border-radius: 10px;
 	background: #333;
 	box-shadow: 2px 2px 5px 1px rgb(14, 13, 13);
@@ -48,14 +48,9 @@ body {
 	margin-top: 1px;
 }
 
-.top-display,
-.bottom-display {
-	overflow: hidden;
-}
-
 .buttons {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-columns: repeat(4, 1fr);
 	margin-top: 0.5rem;
 }
 
@@ -92,5 +87,5 @@ body {
 }
 
 .span-2 {
-	grid-column: 1 / span 2;
+	grid-column: auto / span 2;
 }
